snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/maven-metadata.xml.sha512
bb37f02c33695469f24eb894bb3c9a7774e70a351318d9c7548517e0e22a924b622c5dedc6eb7d3b5929129054e1e52641b11d96c826efca6c9761aa150c5712